// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextBox /> snapshot 1`] = `
<div>
  <label
    class="form-control w-full flex"
    for="test"
  >
    <div
      class="relative"
    >
      <input
        class="input input-bordered w-full text-box-size-md"
        data-testid="test"
        id="test"
        name="test"
      />
    </div>
  </label>
</div>
`;

exports[`<TextBox /> snapshot full 1`] = `
<div>
  <label
    class="form-control w-full flex"
    for="test"
  >
    <span
      class="label-text"
    >
      Label
    </span>
    <div
      class="relative"
    >
      <svg
        class="text-box-left-icon text-box-left-icon-size-lg cursor-not-allowed"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 496 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M248 167.5l64.9 98.8H183.1l64.9-98.8zM496 256c0 136.9-111.1 248-248 248S0 392.9 0 256 111.1 8 248 8s248 111.1 248 248zm-99.8 82.7L248 115.5 99.8 338.7h30.4l33.6-51.7h168.6l33.6 51.7h30.2z"
        />
      </svg>
      <input
        class="input input-bordered w-full text-box-size-lg input-error text-box-with-left-icon text-box-with-right-icon"
        data-testid="test"
        disabled=""
        id="test"
        name="test"
      />
      <svg
        class="text-box-right-icon text-box-right-icon-size-lg cursor-not-allowed"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 496 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M248 167.5l64.9 98.8H183.1l64.9-98.8zM496 256c0 136.9-111.1 248-248 248S0 392.9 0 256 111.1 8 248 8s248 111.1 248 248zm-99.8 82.7L248 115.5 99.8 338.7h30.4l33.6-51.7h168.6l33.6 51.7h30.2z"
        />
      </svg>
    </div>
    <p
      class="text-red-500"
    >
      Error
    </p>
  </label>
</div>
`;
